# tribal-village

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  bench_env.nim  build_bindings.sh  build_lib.sh  generate_image.py  install.sh  panicoverride.nim  pyproject.toml  resources  setup.py  test_tribal_integration.py  test_tribal_village_integration.py  tribal_village.nim  tribal_village.nimble
.beads/: .gitignore  issues.jsonl
baselines/: benchmark.json
bindings/: tribal_village_bindings.nim
data/: agent_behavior_analysis.md  image_prompts.txt  profiling_logs.txt  silky.atlas.json
docs/: AI_CONTROL_GAP_ANALYSIS.md  AI_PERF_AUDIT.md  PERF_OPTIMIZATION_TASKS.md  README.md  TEST_AUDIT_REPORT.md  action_space.md  ai_behavior_analysis.md  ai_options.md  ai_profile_3000_steps.md  ai_profiling.md  ai_system.md  aoe2_design_plan.md  architecture.md  asset_pipeline.md  audit-world-sim-core.md  audit_episode_results.md  audit_orphaned_branches.md  audit_spatial_systems.md  audit_tools.md  cli_and_debugging.md  clippy_tint_freeze.md  code_review_dead_code.md  codebase_audit.md  codex_template.md  combat.md  combat_visuals.md  configuration.md  data_structure_audit.md  economy_respawn.md  entity_interaction_analysis.md  evolution.md  game_logic.md  metta_ui_audit.md  observation_layers.md  observation_space.md  perf-audit-pathfinding-movement.md  perf_audit_hotloops.md  performance_optimization_roadmap.md  performance_scaling_1000_agents.md  population_and_housing.md  (+27 more)
scripts/: asset_audit.py  audit_gui.py  audit_settlement.nim  benchmark_steps.nim  (+31 more)
(+380 files in other folders)
